--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,7 @@ version: '{branch}{build}'
 pull_requests:
   do_not_increment_build_number: true
 skip_tags: true
-image: Visual Studio 2017
+image: Visual Studio 2019
 configuration: Release
 environment:
   COVERALLS_REPO_TOKEN:
@@ -10,14 +10,14 @@ environment:
 nuget:
   disable_publish_on_pr: true
 before_build:
-- cmd: nuget restore xFunc.sln
+- cmd: nuget restore xFunc.UI.sln
 build:
-  project: xFunc.sln
+  project: xFunc.UI.sln
   parallel: true
   verbosity: minimal
 after_build:
 - cmd: >-
-    packages\OpenCover.4.7.922\tools\OpenCover.Console.exe -register:user -output:coverage.xml -target:"packages\xunit.runner.console.2.4.1\tools\net472\xunit.console.x86.exe" -targetargs:"xFunc.Tests\bin\Release\xFunc.Tests.dll -nologo -noshadow" -excludebyattribute:*.ExcludeFromCodeCoverage*^ -filter:"+[xFunc.*]* -[xFunc.Tests*]* -[xFunc.*]*.Resource -[xFunc.*]*Exception"
+    "%userprofile%\.nuget\packages\opencover\4.7.922\tools\OpenCover.Console.exe" -register:user -output:coverage.xml -target:"dotnet.exe" -targetargs:"test xFunc.Tests\xFunc.Tests.csproj --no-build -c Release" -excludebyattribute:*.ExcludeFromCodeCoverage*^ -filter:"+[xFunc.*]* -[xFunc.Tests*]* -[xFunc.*]*.Resource -[xFunc.*]*Exception" -oldStyle
 
-    packages\coveralls.io.1.3.4\tools\coveralls.net.exe --opencover coverage.xml
+    "%userprofile%\.nuget\packages\coveralls.io\1.4.2\tools\coveralls.net.exe" --opencover coverage.xml
 deploy: off
