--- a/xFunc.Maths/xFunc.Maths.csproj
+++ b/xFunc.Maths/xFunc.Maths.csproj
@@ -1,286 +1,80 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{91AD4FBF-D01A-4BD3-B3E9-CAF885CC208C}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>xFunc.Maths</RootNamespace>
-    <AssemblyName>xFunc.Maths</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
+    <PackageId>xFunc.Maths</PackageId>
+    <Version>4.0.0</Version>
+    <Product>xFunc.Maths</Product>
+    <Authors>Dmitry Kischenko</Authors>
+    <Company />
+    <Copyright>Copyright ©2012-2019 Dmitry Kischenko</Copyright>
+    <Description>xFunc.Maths is a simple and easy to use library that allows you to build mathematical expressions.</Description>
+    <PackageProjectUrl>https://github.com/sys27/xFunc</PackageProjectUrl>
+    <PackageIconUrl>https://raw.githubusercontent.com/sys27/xFunc/master/xFunc/Images/xFunc.ico</PackageIconUrl>
+    <PackageTags>Math Expression Expressions Parser MathParser Differentiation Simplification</PackageTags>
+    <NeutralLanguage>en</NeutralLanguage>
+    <AssemblyVersion>4.0.0</AssemblyVersion>
+    <FileVersion>4.0.0</FileVersion>
+    <RepositoryUrl>https://github.com/sys27/xFunc</RepositoryUrl>
+    <RepositoryType>GitHub</RepositoryType>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\net40\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <DebugSymbols>true</DebugSymbols>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\net40\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-    <DocumentationFile>bin\Release\net40\xFunc.Maths.XML</DocumentationFile>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Numerics" />
+    <Compile Remove="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+
   <ItemGroup>
-    <Compile Include="..\SharedCode\SharedAssemblyInfo.cs">
-      <Link>Properties\SharedAssemblyInfo.cs</Link>
-    </Compile>
-    <Compile Include="Analyzers\Analyzer.cs" />
-    <Compile Include="Analyzers\Differentiator.cs" />
-    <Compile Include="Analyzers\Formatters\CommonFormatter.cs" />
-    <Compile Include="Analyzers\Formatters\IFormatter.cs" />
-    <Compile Include="Analyzers\IAnalyzer.cs" />
-    <Compile Include="Analyzers\TypeAnalyzers\BinaryParameterTypeMismatchException.cs" />
-    <Compile Include="Analyzers\TypeAnalyzers\DifferentParameterTypeMismatchException.cs" />
-    <Compile Include="Analyzers\Simplifier.cs" />
-    <Compile Include="Analyzers\TypeAnalyzers\ITypeAnalyzer.cs" />
-    <Compile Include="Analyzers\TypeAnalyzers\TypeAnalyzer.cs" />
-    <Compile Include="Builder.cs" />
-    <Compile Include="Expressions\Ceil.cs" />
-    <Compile Include="Expressions\ComplexNumbers\ComplexNumber.cs" />
-    <Compile Include="Expressions\ComplexNumbers\Conjugate.cs" />
-    <Compile Include="Expressions\ComplexNumbers\Im.cs" />
-    <Compile Include="Expressions\ComplexNumbers\Phase.cs" />
-    <Compile Include="Expressions\ComplexNumbers\Re.cs" />
-    <Compile Include="Expressions\ComplexNumbers\Reciprocal.cs" />
-    <Compile Include="Expressions\DelegateExpression.cs" />
-    <Compile Include="Expressions\DifferentParametersExpression.cs" />
-    <Compile Include="Expressions\ExpressionParameters.cs" />
-    <Compile Include="Analyzers\TypeAnalyzers\ResultType.cs" />
-    <Compile Include="Expressions\Fact.cs" />
-    <Compile Include="Expressions\Floor.cs" />
-    <Compile Include="Expressions\GCD.cs" />
-    <Compile Include="Expressions\Hyperbolic\HyperbolicExpression.cs" />
-    <Compile Include="Expressions\LCM.cs" />
-    <Compile Include="Expressions\Collections\FunctionCollection.cs" />
-    <Compile Include="Expressions\Collections\Parameter.cs" />
-    <Compile Include="Expressions\Collections\ParameterCollection.cs" />
-    <Compile Include="Expressions\Collections\ParameterIsReadOnlyException.cs" />
-    <Compile Include="Expressions\Collections\ParameterType.cs" />
-    <Compile Include="Expressions\Lb.cs" />
-    <Compile Include="Expressions\LogicalAndBitwise\Bool.cs" />
-    <Compile Include="Expressions\LogicalAndBitwise\Equality.cs" />
-    <Compile Include="Expressions\LogicalAndBitwise\Implication.cs" />
-    <Compile Include="Expressions\LogicalAndBitwise\NAnd.cs" />
-    <Compile Include="Expressions\LogicalAndBitwise\NOr.cs" />
-    <Compile Include="Expressions\Matrices\CrossProduct.cs" />
-    <Compile Include="Expressions\Matrices\Determinant.cs" />
-    <Compile Include="Expressions\Matrices\DotProduct.cs" />
-    <Compile Include="Expressions\Matrices\Inverse.cs" />
-    <Compile Include="Expressions\Matrices\Matrix.cs" />
-    <Compile Include="Expressions\Matrices\MatrixExtensions.cs" />
-    <Compile Include="Expressions\Matrices\MatrixIsInvalidException.cs" />
-    <Compile Include="Expressions\Matrices\Transpose.cs" />
-    <Compile Include="Expressions\Matrices\Vector.cs" />
-    <Compile Include="Expressions\Del.cs" />
-    <Compile Include="Expressions\Mod.cs" />
-    <Compile Include="Analyzers\TypeAnalyzers\ParameterTypeMismatchException.cs" />
-    <Compile Include="Expressions\ResultIsNotSupportedException.cs" />
-    <Compile Include="Expressions\Statistical\Count.cs" />
-    <Compile Include="Expressions\Statistical\Product.cs" />
-    <Compile Include="Expressions\Programming\AddAssign.cs" />
-    <Compile Include="Expressions\Programming\And.cs" />
-    <Compile Include="Expressions\Programming\Dec.cs" />
-    <Compile Include="Expressions\Programming\DivAssign.cs" />
-    <Compile Include="Expressions\Programming\Equal.cs" />
-    <Compile Include="Expressions\Programming\For.cs" />
-    <Compile Include="Expressions\Programming\GreaterOrEqual.cs" />
-    <Compile Include="Expressions\Programming\GreaterThan.cs" />
-    <Compile Include="Expressions\Programming\If.cs" />
-    <Compile Include="Expressions\Programming\Inc.cs" />
-    <Compile Include="Expressions\Programming\LessOrEqual.cs" />
-    <Compile Include="Expressions\Programming\LessThan.cs" />
-    <Compile Include="Expressions\Programming\MulAssign.cs" />
-    <Compile Include="Expressions\Programming\NotEqual.cs" />
-    <Compile Include="Expressions\Programming\Or.cs" />
-    <Compile Include="Expressions\Programming\SubAssign.cs" />
-    <Compile Include="Expressions\Programming\While.cs" />
-    <Compile Include="Expressions\Round.cs" />
-    <Compile Include="Expressions\Simplify.cs" />
-    <Compile Include="Expressions\Statistical\Avg.cs" />
-    <Compile Include="Expressions\Statistical\Max.cs" />
-    <Compile Include="Expressions\Statistical\Min.cs" />
-    <Compile Include="Expressions\Statistical\Varp.cs" />
-    <Compile Include="Expressions\Statistical\Var.cs" />
-    <Compile Include="Expressions\Statistical\Stdevp.cs" />
-    <Compile Include="Expressions\Statistical\Stdev.cs" />
-    <Compile Include="Expressions\Statistical\Sum.cs" />
-    <Compile Include="ComplexExtensions.cs" />
-    <Compile Include="Helpers.cs" />
-    <Compile Include="Analyzers\IDifferentiator.cs" />
-    <Compile Include="IExpressionFactory.cs" />
-    <Compile Include="InvalidResultException.cs" />
-    <Compile Include="IParser.cs" />
-    <Compile Include="Analyzers\ISimplifier.cs" />
-    <Compile Include="ExpressionFactory.cs" />
-    <Compile Include="Tokenization\PostProcessing\CreateUnaryMinusPostProcessor.cs" />
-    <Compile Include="Tokenization\PostProcessing\RemoveUnaryPlusPostProcessor.cs" />
-    <Compile Include="Tokenization\PostProcessing\CloseBracketNotEnoughParameters.cs" />
-    <Compile Include="Tokenization\PostProcessing\FactorialNotSupportedSymbol.cs" />
-    <Compile Include="Tokenization\PostProcessing\NotOperationNotSupportedSymbol.cs" />
-    <Compile Include="TokenizeException.cs" />
-    <Compile Include="ParseException.cs" />
-    <Compile Include="Expressions\Abs.cs" />
-    <Compile Include="Expressions\Add.cs" />
-    <Compile Include="Expressions\AngleMeasurement.cs" />
-    <Compile Include="Expressions\LogicalAndBitwise\And.cs" />
-    <Compile Include="Expressions\LogicalAndBitwise\XOr.cs" />
-    <Compile Include="Expressions\LogicalAndBitwise\Or.cs" />
-    <Compile Include="Expressions\LogicalAndBitwise\Not.cs" />
-    <Compile Include="Expressions\Trigonometric\Arccos.cs" />
-    <Compile Include="Expressions\Trigonometric\Arccot.cs" />
-    <Compile Include="Expressions\Trigonometric\Arccsc.cs" />
-    <Compile Include="Expressions\Trigonometric\Arcsec.cs" />
-    <Compile Include="Expressions\Trigonometric\Arcsin.cs" />
-    <Compile Include="Expressions\Trigonometric\Arctan.cs" />
-    <Compile Include="Expressions\Define.cs" />
-    <Compile Include="Expressions\BinaryExpression.cs" />
-    <Compile Include="Expressions\Hyperbolic\Arcsch.cs" />
-    <Compile Include="Expressions\Hyperbolic\Arsech.cs" />
-    <Compile Include="Expressions\Hyperbolic\Arcoth.cs" />
-    <Compile Include="Expressions\Hyperbolic\Artanh.cs" />
-    <Compile Include="Expressions\Hyperbolic\Arcosh.cs" />
-    <Compile Include="Expressions\Hyperbolic\Arsinh.cs" />
-    <Compile Include="Expressions\Hyperbolic\Csch.cs" />
-    <Compile Include="Expressions\Trigonometric\Csc.cs" />
-    <Compile Include="Expressions\Trigonometric\Cos.cs" />
-    <Compile Include="Expressions\Trigonometric\Cot.cs" />
-    <Compile Include="Expressions\Derivative.cs" />
-    <Compile Include="Expressions\Div.cs" />
-    <Compile Include="Expressions\Exp.cs" />
-    <Compile Include="Expressions\Pow.cs" />
-    <Compile Include="Expressions\Hyperbolic\Cosh.cs" />
-    <Compile Include="Expressions\Hyperbolic\Coth.cs" />
-    <Compile Include="Expressions\Hyperbolic\Sech.cs" />
-    <Compile Include="Expressions\Hyperbolic\Sinh.cs" />
-    <Compile Include="Expressions\Hyperbolic\Tanh.cs" />
-    <Compile Include="Expressions\IExpression.cs" />
-    <Compile Include="Expressions\IFunctionExpression.cs" />
-    <Compile Include="Expressions\Lg.cs" />
-    <Compile Include="Expressions\Ln.cs" />
-    <Compile Include="Expressions\Log.cs" />
-    <Compile Include="Expressions\Mul.cs" />
-    <Compile Include="Expressions\Number.cs" />
-    <Compile Include="Expressions\Root.cs" />
-    <Compile Include="Expressions\Trigonometric\Sec.cs" />
-    <Compile Include="Expressions\Trigonometric\Sin.cs" />
-    <Compile Include="Expressions\Sqrt.cs" />
-    <Compile Include="Expressions\Sub.cs" />
-    <Compile Include="Expressions\Trigonometric\Tan.cs" />
-    <Compile Include="Expressions\Trigonometric\TrigonometricExpression.cs" />
-    <Compile Include="Expressions\UnaryExpression.cs" />
-    <Compile Include="Expressions\UnaryMinus.cs" />
-    <Compile Include="Expressions\Undefine.cs" />
-    <Compile Include="Expressions\UserFunction.cs" />
-    <Compile Include="Expressions\Variable.cs" />
-    <Compile Include="Expressions\Sign.cs" />
-    <Compile Include="MathExtensions.cs" />
-    <Compile Include="Parser.cs" />
-    <Compile Include="Processor.cs" />
-    <Compile Include="Resources\Resource.ru.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resource.ru.resx</DependentUpon>
-    </Compile>
-    <Compile Include="Resources\Resource.uk.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resource.uk.resx</DependentUpon>
-    </Compile>
-    <Compile Include="Results\ComplexNumberResult.cs" />
-    <Compile Include="NumeralSystem.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Resources\Resource.Designer.cs">
+    <None Remove="xFunc.Maths.nuspec" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\LICENSE" Link="LICENSE">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="..\NOTICE" Link="NOTICE">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Resources\Resource.Designer.cs">
       <DependentUpon>Resource.resx</DependentUpon>
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
     </Compile>
-    <Compile Include="Results\IResult.cs" />
-    <Compile Include="Results\ExpressionResult.cs" />
-    <Compile Include="Results\NumberResult.cs" />
-    <Compile Include="Results\StringResult.cs" />
-    <Compile Include="Results\BooleanResult.cs" />
-    <Compile Include="Tokenization\ILexer.cs" />
-    <Compile Include="Tokenization\Lexer.cs" />
-    <Compile Include="Tokenization\Factories\ComplexNumberTokenFactory.cs" />
-    <Compile Include="Tokenization\Factories\ConstantTokenFactory.cs" />
-    <Compile Include="Tokenization\Factories\EmptyTokenFactory.cs" />
-    <Compile Include="Tokenization\Factories\FactoryBase.cs" />
-    <Compile Include="Tokenization\Factories\FactoryResult.cs" />
-    <Compile Include="Tokenization\Factories\FunctionTokenFactory.cs" />
-    <Compile Include="Tokenization\Factories\ITokenFactory.cs" />
-    <Compile Include="Tokenization\Factories\NumberBinTokenFactory.cs" />
-    <Compile Include="Tokenization\Factories\NumberHexTokenFactory.cs" />
-    <Compile Include="Tokenization\Factories\NumberOctTokenFactory.cs" />
-    <Compile Include="Tokenization\Factories\NumberTokenFactory.cs" />
-    <Compile Include="Tokenization\Factories\OperationTokenFactory.cs" />
-    <Compile Include="Tokenization\Factories\SymbolTokenFactory.cs" />
-    <Compile Include="Tokenization\Factories\VariableTokenFactory.cs" />
-    <Compile Include="Tokenization\PostProcessing\CreateMatrixPostProcessor.cs" />
-    <Compile Include="Tokenization\PostProcessing\CreateMultiplicationPostProcessor.cs" />
-    <Compile Include="Tokenization\PostProcessing\CreateVectorPostProcessor.cs" />
-    <Compile Include="Tokenization\PostProcessing\ILexerPostProcessor.cs" />
-    <Compile Include="Tokenization\PostProcessing\LexerPostProcessorBase.cs" />
-    <Compile Include="Tokenization\PostProcessing\ParameterCounter.cs" />
-    <Compile Include="Tokenization\Tokens\BooleanToken.cs" />
-    <Compile Include="Tokenization\Tokens\ComplexNumberToken.cs" />
-    <Compile Include="Tokenization\Tokens\FunctionToken.cs" />
-    <Compile Include="Tokenization\Tokens\Functions.cs" />
-    <Compile Include="Tokenization\Tokens\IToken.cs" />
-    <Compile Include="Tokenization\Tokens\NumberToken.cs" />
-    <Compile Include="Tokenization\Tokens\OperationToken.cs" />
-    <Compile Include="Tokenization\Tokens\Operations.cs" />
-    <Compile Include="Tokenization\Tokens\SymbolToken.cs" />
-    <Compile Include="Tokenization\Tokens\Symbols.cs" />
-    <Compile Include="Tokenization\Tokens\UserFunctionToken.cs" />
-    <Compile Include="Tokenization\Tokens\VariableToken.cs" />
-    <Compile Include="Tokenization\TokensBuilder.cs" />
+    <Compile Update="Resources\Resource.ru.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resource.ru.resx</DependentUpon>
+    </Compile>
+    <Compile Update="Resources\Resource.uk.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resource.uk.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
+
   <ItemGroup>
-    <EmbeddedResource Include="Resources\Resource.uk.resx">
+    <EmbeddedResource Update="Resources\Resource.uk.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resource.uk.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="Resources\Resource.resx">
+    <EmbeddedResource Update="Resources\Resource.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resource.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="Resources\Resource.ru.resx">
+    <EmbeddedResource Update="Resources\Resource.ru.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resource.ru.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup>
-    <None Include="..\LICENSE">
-      <Link>LICENSE</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="..\NOTICE">
-      <Link>NOTICE</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
 </Project>
