--- a/xFunc.DotnetTool/xFunc.DotnetTool.csproj
+++ b/xFunc.DotnetTool/xFunc.DotnetTool.csproj
@@ -4,7 +4,21 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <PackAsTool>true</PackAsTool>
-    <ToolCommandName>xFunc</ToolCommandName>
+    <ToolCommandName>xFunc</ToolCommandName>    
+    <PackageId>xFunc.DotnetTool</PackageId>
+    <Version>4.0.0</Version>
+    <Product>xFunc.Maths</Product>
+    <Authors>Dmitry Kischenko</Authors>
+    <Company />
+    <Copyright>Copyright ©2012-2019 Dmitry Kischenko</Copyright>
+    <PackageProjectUrl>https://github.com/sys27/xFunc</PackageProjectUrl>
+    <PackageIconUrl>https://raw.githubusercontent.com/sys27/xFunc/master/xFunc/Images/xFunc.ico</PackageIconUrl>
+    <PackageTags>Math Expression Expressions Parser MathParser Differentiation Simplification</PackageTags>
+    <AssemblyVersion>4.0.0</AssemblyVersion>
+    <FileVersion>4.0.0</FileVersion>
+    <RepositoryUrl>https://github.com/sys27/xFunc</RepositoryUrl>
+    <RepositoryType>GitHub</RepositoryType>
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
