Close #230 - Move from OpenCover to coverlet

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,8 +11,8 @@
         "**/packages": true,
         "**/coverage": true,
         "coverage.xml": true,
+        "coverage.cobertura.xml": true,
         "xFunc": true,
-        "xFunc.UI.sln": true,
         "desktop.ini": true
     }
 }
