--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,34 +10,68 @@
                 "kind": "build",
                 "isDefault": true
             },
-            "command": "dotnet build xFunc.sln",
+            "command": "dotnet build xFunc.sln -c ${input:configurationType}",
             "presentation": {
                 "reveal": "silent"
             },
             "problemMatcher": "$msCompile"
         },
         {
-            "label": "Build Release",
-            "type": "shell",
-            "group": "build",
-            "command": "dotnet build xFunc.sln -c Release",
-            "presentation": {
-                "reveal": "silent"
-            },
-            "problemMatcher": "$msCompile"
-        },
-        {
-            "label": "Build",
+            "label": "Test",
             "type": "shell",
             "group": {
                 "kind": "test",
                 "isDefault": true
             },
-            "command": "dotnet test xFunc.sln",
+            "command": "dotnet test xFunc.sln -c ${input:configurationType}",
             "presentation": {
                 "reveal": "silent"
             },
             "problemMatcher": "$msCompile"
+        },
+        {
+            "label": "Code Coverage",
+            "type": "shell",
+            "group": "test",
+            "command": "dotnet test -c ${input:configurationType} -p:CollectCoverage=true -p:CoverletOutputFormat=cobertura -p:CoverletOutput=\"../coverage/\" -p:ExcludeByAttribute=\"ExcludeFromCodeCoverage\" -p:Include=\"[xFunc.*]*\" -p:Exclude=\"[xFunc.Tests*]*%2c[xFunc.*]*.Resource%2c[xFunc.*]*Exception\" -p:Threshold=90 -p:ThresholdStat=total",
+            "presentation": {
+                "reveal": "silent"
+            },
+            "problemMatcher": "$msCompile"
+        },
+        {
+            "label": "Generate Report",
+            "dependsOn": [
+                "Code Coverage"
+            ],
+            "type": "shell",
+            "group": "test",
+            "options": {
+                "cwd": "${workspaceRoot}/xFunc.Tests/"
+            },
+            "command": "dotnet",
+            "args": [
+                "reportgenerator",
+                "-reports:\"../coverage/coverage.cobertura.xml\"",
+                "-targetdir:\"../coverage\"",
+                "-reporttypes:HtmlInline_AzurePipelines"
+            ],
+            "presentation": {
+                "reveal": "silent"
+            },
+            "problemMatcher": "$msCompile"
+        }
+    ],
+    "inputs": [
+        {
+            "id": "configurationType",
+            "description": "Please, select configuration type from list.",
+            "type": "pickString",
+            "options": [
+                "Debug",
+                "Release"
+            ],
+            "default": "Debug"
         }
     ]
 }
